--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,19 @@
 		<java.version>21</java.version>
 	</properties>
 	<dependencies>
+		<!-- Jakarta Persistence API for JPA annotations -->
+		<dependency>
+			<groupId>jakarta.persistence</groupId>
+			<artifactId>jakarta.persistence-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+
+		<!-- Jakarta Bean Validation for validation annotations -->
+		<dependency>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+			<version>3.0.2</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
