--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,8 @@
     <modules>
         <module>user-service</module>
         <module>room-service</module>
-    </modules>
+		<module>puzzle-service</module>
+	</modules>
     <scm>
 		<connection/>
 		<developerConnection/>
